@@ -47,7 +47,6 @@
 #ifndef WIN32 /* ---win32 exclude unix headers */
 #include <sys/types.h>
 #include <sys/time.h>
-#include <sys/socket.h>
 #include <netinet/in.h>
 #include <netdb.h>
 #endif /* end win32 */
